# WritingRobot

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Control.ui  Control_ui.py  README.md  _calculations.py  _tools.py  create_virt_env.bat  designer.exe – zástupce.lnk  diagram.json  main.py  my.py  regen_ui.bat  requirements.txt
.github/workflows/: python-package.yml
02_HW/board/: WritingRobotV2-B_Cu.gbl  WritingRobotV2-B_Mask.gbs  WritingRobotV2-B_Silkscreen.gbo  WritingRobotV2-Edge_Cuts.gm1  WritingRobotV2-F_Mask.gts  WritingRobotV2-PTH-drl_map.gbr  WritingRobotV2-PTH.drl  WritingRobotV2.kicad_pro  WritingRobotV2.kicad_sch  fp-lib-table
03_SW/1_ControlApp/: requirements.txt
03_SW/2_Firmware/: .cproject  .mxproject  .project  STM32F103C6TX_FLASH.ld  WritingRobot.ioc  WritingRobot.launch
arduino/: arduino.ino
arduino/src/: constants.h  main.c  motor_control.c  motor_control.cpp  motor_control.h  steps_sender.c  steps_sender.cpp  steps_sender.h
arduino/test/: test_motor_control.c
board/: #auto_saved_files#  WritingRobotV2-B_Paste.gbp  WritingRobotV2-F_Cu.gtl  WritingRobotV2-F_Paste.gtp  WritingRobotV2-F_Silkscreen.gto  WritingRobotV2-NPTH-drl_map.gbr  WritingRobotV2-NPTH.drl  WritingRobotV2.kicad_pcb  WritingRobotV2.kicad_prl  WritingRobotV2.kicad_pro  WritingRobotV2.kicad_sch  _autosave-WritingRobotV2.kicad_pcb  _autosave-WritingRobotV2.kicad_sch  fp-info-cache  ~_autosave-WritingRobotV2.kicad_pcb.lck
board/fab/: WritingRobotV2-B_Cu.gbl  WritingRobotV2-B_Mask.gbs  WritingRobotV2-B_Paste.gbp  WritingRobotV2-B_Silkscreen.gbo  WritingRobotV2-Edge_Cuts.gm1  WritingRobotV2-F_Cu.gtl  WritingRobotV2-F_Mask.gts  WritingRobotV2-F_Paste.gtp  WritingRobotV2-F_Silkscreen.gto  WritingRobotV2-NPTH-drl_map.gbr  WritingRobotV2-NPTH.drl  WritingRobotV2-PTH-drl_map.gbr  WritingRobotV2-PTH.drl
board/imgs/: pikachu.ps  pikachu_small_2.kicad_mod  pikachu_small_3.kicad_mod
control/: Control_GUI.py  __init__.py  _helpers.py  _tools.py  regen_ui.bat
docu/Diagrams/: TCurve.drawio
electronics_calculations/: main.py
gui/: Control.ui  __init__.py  constants.py  control_ui.py  drawer.py  graphics.py  graphics_scene.py  graphics_view.py  main_gui.py  main_window.py  motor_dial.py
gui/control/: Control.ui  __init__.py  _helpers.py  _tools.py  control_GUI.py
gui/drawer/: drawer.py
gui/mechanics/: __init__.py  robot.py  robot_mixins.py  settings.yaml  test.py
gui/paint/: customwidget.py  main.py
mechanics/: Robot.py  drawer.py
mechanics/Scheme/: Main_scheme.dft
models/base/: RobotBase.3mf  RobotBase_0.3mm_PLA_MK3S_45m.gcode
src/: __init__.py  constants.py
src/TCurve/: main.cpp  tcurve.cpp  tcurve.h
test/: test_SCurve.cpp  test_TCurve.cpp  test_all.py  test_calculations.py  test_helpers.py
(+105 files in other folders)
